<resources>
    <string name="app_name">GADS Leaderboard</string>
    <string name="title_activity_leaderboard">LEADERBOARD</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="submit">Submit</string>
    <string name="submit_form_title">Project Submission</string>
    <string name="learning_tab_title">Learning Leaders</string>
    <string name="skill_iq_tab_title">Skill IQ Leaders</string>
    <string name="dummy_name">John Doe</string>
    <string name="dummy_hours">- learning hours,</string>
    <string name="dummy_score">- skill IQ Score,</string>
    <string name="dummy_country">Nigeria</string>
    <string name="github_placeholder">Project on GITHUB (link)</string>
    <string name="email_placeholder">Email Address</string>
    <string name="first_name_placeholder">First Name</string>
    <string name="last_name_placeholder">Last Name</string>
    <string name="submit_yes">Yes</string>
    <string name="submit_sure">Are you sure</string>
    <string name="submission_success">Submission Successful</string>
    <string name="submission_failure">Submission not Successful</string>
</resources>
