<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <ImageView
            android:id="@+id/learning_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="22dp"
            android:src="@drawable/learning_badge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/learning_badge" />

        <TextView
            android:id="@+id/learning_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/dummy_name"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/learning_hours"
            app:layout_constraintStart_toEndOf="@id/learning_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/learning_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/dummy_hours"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/learning_image"
            app:layout_constraintTop_toBottomOf="@id/learning_name" />

        <TextView
            android:id="@+id/learning_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/dummy_country"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintBottom_toBottomOf="@id/learning_hours"
            app:layout_constraintStart_toEndOf="@id/learning_hours"
            app:layout_constraintTop_toTopOf="@id/learning_hours" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>