<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <ImageView
            android:id="@+id/skill_iq_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="22dp"
            android:src="@drawable/skill_iq_badge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/skill_iq_badge" />

        <TextView
            android:id="@+id/skill_iq_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/dummy_name"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/skill_iq_score"
            app:layout_constraintStart_toEndOf="@id/skill_iq_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/skill_iq_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/dummy_score"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/skill_iq_image"
            app:layout_constraintTop_toBottomOf="@id/skill_iq_name" />

        <TextView
            android:id="@+id/skill_iq_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/dummy_country"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintBottom_toBottomOf="@id/skill_iq_score"
            app:layout_constraintStart_toEndOf="@id/skill_iq_score"
            app:layout_constraintTop_toTopOf="@id/skill_iq_score" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>