<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    tools:context=".SubmissionDetailsActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SubmissionActivity">

            <TextView
                android:id="@+id/text_view_submit_form_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/submit_form_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorSpecial"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_submit_title_underline"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_submit_form_title"
                app:srcCompat="@drawable/submit_form_title" />

            <LinearLayout
                android:id="@+id/name_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/image_submit_title_underline">

                <EditText
                    android:id="@+id/edit_text_first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginRight="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/submit_form_edit_text_background"
                    android:ems="10"
                    android:hint="@string/first_name_placeholder"
                    android:textColorHint="@color/colorTextPrimary"
                    android:textColor="@color/colorSecondary"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:autofillHints="firstName" />

                <EditText
                    android:id="@+id/edit_text_last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:background="@drawable/submit_form_edit_text_background"
                    android:ems="10"
                    android:hint="@string/last_name_placeholder"
                    android:textColorHint="@color/colorTextPrimary"
                    android:textColor="@color/colorSecondary"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:autofillHints="lastName" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/submit_form_edit_text_background"
                android:ems="10"
                android:hint="@string/email_placeholder"
                android:textColorHint="@color/colorTextPrimary"
                android:textColor="@color/colorSecondary"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:autofillHints="emailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_layout" />

            <EditText
                android:id="@+id/edit_text_github"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/submit_form_edit_text_background"
                android:ems="10"
                android:hint="@string/github_placeholder"
                android:textColorHint="@color/colorTextPrimary"
                android:textColor="@color/colorSecondary"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:autofillHints="website"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

            <Button
                android:id="@+id/button_submit_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/submit_form_button_background"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.464"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_github" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_submission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:toolbarId="@+id/toolbar_layout_submission"
            android:background="@android:color/transparent">

            <ImageView
                android:id="@+id/app_bar_back_image"
                android:src="@drawable/back_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/transparent" />

            <ImageView
                android:id="@+id/app_bar_image"
                android:src="@drawable/toolbar_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent" />

            <!-- androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_submission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary"
                android:background="@android:color/transparent" /-->
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>